--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,13 @@ body {
   place-content: center;
 }
 .cab-container {
+  background: #fff;
+  border-radius: 14px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* margin: 0 auto; */
-  background: white;
-  border-radius: 14px;
-  min-width: 430px;
+  min-width: 528px;
+  flex-wrap: wrap;
 }
 .cab-list {
   display: flex;
